--- a/_includes/article-info.html
+++ b/_includes/article-info.html
@@ -1,35 +1,32 @@
 {%- assign _author = site.data.authors[include.article.author] | default: site.author -%}
 
 {%- if include.html != false -%}
-{%- include snippets/assign.html target=site.data.variables.default.page.show_date source0=layout.show_date
-source1=include.article.show_date -%}
-{%- assign _show_date = __return -%}
+  {%- include snippets/assign.html target=site.data.variables.default.page.show_date source0=layout.show_date source1=include.article.show_date -%}
+  {%- assign _show_date = __return -%}
 {%- endif -%}
 
 {%- if _show_date and include.article.date -%}
-{%- assign _show_date = true -%}
+  {%- assign _show_date = true -%}
 {%- else -%}
-{%- assign _show_date = false -%}
+  {%- assign _show_date = false -%}
 {%- endif -%}
 
-{%- include snippets/assign.html target=site.data.variables.default.page.show_tags source0=layout.show_tags
-source1=include.article.show_tags -%}
+{%- include snippets/assign.html target=site.data.variables.default.page.show_tags source0=layout.show_tags source1=include.article.show_tags -%}
 {%- assign _show_tags = __return -%}
 {%- if _show_tags and include.article.tags[0] -%}
-{%- assign _show_tags = true -%}
+  {%- assign _show_tags = true -%}
 {%- else -%}
-{%- assign _show_tags = false -%}
+  {%- assign _show_tags = false -%}
 {%- endif -%}
 
 {%- assign _show_author = include.article.author -%}
 
-{%- include snippets/assign.html target=site.data.variables.default.page.pageview source0=layout.pageview
-source1=page.pageview -%}
+{%- include snippets/assign.html target=site.data.variables.default.page.pageview source0=layout.pageview source1=page.pageview -%}
 {%- assign _pageview = __return -%}
 {%- if _pageview or include.show_pageview -%}
-{%- assign _pageview = true -%}
+  {%- assign _pageview = true -%}
 {%- else -%}
-{%- assign _pageview = false -%}
+  {%- assign _pageview = false -%}
 {%- endif -%}
 
 {%- assign _paths_archive = site.paths.archive | default: site.data.variables.default.paths.archive -%}
@@ -37,87 +34,89 @@ source1=page.pageview -%}
 {%- include snippets/assign.html target=site.data.variables.default.page.read_time -%}
 {%- assign _read_time = __return -%}
 {%- if _read_time -%}
-{%- assign _read_time = true -%}
+  {%- assign _read_time = true -%}
 {%- else -%}
-{%- assign _read_time = false -%}
+  {%- assign _read_time = false -%}
 {%- endif -%}
 
 {%- if _show_tags or _show_author or _show_date or _pageview or _read_time -%}
-<!-- 文章标签、作者、日期 -->
-<div class="article__info clearfix">
-  {%- if _show_tags -%}
-  <ul class="left-col menu">
-    {%- assign _tag_path = _paths_archive | append: '?tag=' -%}
-    {%- include snippets/prepend-baseurl.html path=_tag_path -%}
+  <!-- 文章标签、作者、日期 -->
+  <div class="article__info clearfix">
+    {%- if _show_tags -%}
+      <ul class="left-col menu">
+        {%- assign _tag_path = _paths_archive | append: '?tag=' -%}
+        {%- include snippets/prepend-baseurl.html path=_tag_path -%}
 
-    <!-- 标签 -->
-    {%- for _tag in include.article.tags -%}
-    {%- assign _tag_path = __return -%}
-    {%- assign _tag_encode = _tag | strip | url_encode -%}
-    <li>
-      <a class="button button--secondary button--pill button--sm"
-        href="{{ _tag_path | append: _tag_encode | replace: '//', '/' }}">
-        {{- _tag -}}
-      </a>
-    </li>
-    {%- endfor -%}
-  </ul>
-  {%- endif -%}
-
-  {%- if _show_author or _show_date or _pageview or _read_time -%}
-  <ul class="right-col menu">
-    <!-- 作者 -->
-    {%- if _show_author -%}
-    <li>
-      <i class="fas fa-user"></i> <span>{{ _author.name }}</span>
-    </li>
+        <!-- 标签 -->
+        {%- for _tag in include.article.tags -%}
+          {%- assign _tag_path = __return -%}
+          {%- assign _tag_encode = _tag | strip | url_encode -%}
+          <li>
+            <a
+              class="button button--secondary button--pill button--sm"
+              href="{{ _tag_path | append: _tag_encode | replace: '//', '/' }}"
+            >
+              {{- _tag -}}
+            </a>
+          </li>
+        {%- endfor -%}
+      </ul>
     {%- endif -%}
 
-    <!-- 发表日期 -->
-    {%- if _show_date -%}
-    <li>
-      {%- include snippets/get-locale-string.html key='ARTICLE_DATE_FORMAT' -%}
-      <i class="far fa-calendar-alt"></i> <span>{{ include.article.date | date: __return }}</span>
-    </li>
-    {%- endif -%}
+    {%- if _show_author or _show_date or _pageview or _read_time -%}
+      <ul class="right-col menu">
+        <!-- 作者 -->
+        {%- if _show_author -%}
+          <li>
+            <i class="fas fa-user"></i> <span>{{ _author.name }}</span>
+          </li>
+        {%- endif -%}
 
-    <!-- 浏览次数 -->
-    {%- if _pageview -%}
-    {%- if site.pageview.provider -%}
-    {%- include snippets/get-locale-string.html key='VIEWS' -%}
-    {%- assign _locale_views = __return -%}
-    <li>
-      <i class="far fa-eye"></i> <span class="js-pageview" data-page-key="{{ include.article.key }}">0</span>
-      {{ _locale_views }}
-    </li>
-    {%- endif -%}
-    {%- endif -%}
+        <!-- 发表日期 -->
+        {%- if _show_date -%}
+          <li>
+            {%- include snippets/get-locale-string.html key='ARTICLE_DATE_FORMAT' -%}
+            <i class="far fa-calendar-alt"></i> <span>{{ include.article.date | date: __return }}</span>
+          </li>
+        {%- endif -%}
 
-    <!-- 阅读时间 -->
-    {%- if _read_time and include.article.layout == 'article' -%}
-    <li>
-      <i class="fa-regular fa-clock"></i>
-      <span>
-        {%- include read-time.html content=include.article.content _return=true layout=include.article.layout -%}
-      </span>
-    </li>
+        <!-- 浏览次数 -->
+        {%- if _pageview -%}
+          {%- if site.pageview.provider -%}
+            {%- include snippets/get-locale-string.html key='VIEWS' -%}
+            {%- assign _locale_views = __return -%}
+            <li>
+              <i class="far fa-eye"></i> <span class="js-pageview" data-page-key="{{ include.article.key }}">0</span>
+              {{ _locale_views }}
+            </li>
+          {%- endif -%}
+        {%- endif -%}
+
+        <!-- 阅读时间 -->
+        {%- if _read_time and include.article.layout == 'article' -%}
+          <li>
+            <i class="fa-regular fa-clock"></i>
+            <span>
+              {%- include read-time.html content=include.article.content show_label=true layout=include.article.layout -%}
+            </span>
+          </li>
+        {%- endif -%}
+      </ul>
     {%- endif -%}
-  </ul>
-  {%- endif -%}
-</div>
+  </div>
 {%- endif -%}
 
 {%- if include.semantic != false -%}
-{%- if _author -%}
-<meta itemprop="author" content="{{ _author.name }}">
-{%- endif -%}
+  {%- if _author -%}
+    <meta itemprop="author" content="{{ _author.name }}">
+  {%- endif -%}
 
-{%- if include.article.date -%}
-<meta itemprop="datePublished" content="{{ include.article.date | date_to_xmlschema }}">
-{%- endif -%}
+  {%- if include.article.date -%}
+    <meta itemprop="datePublished" content="{{ include.article.date | date_to_xmlschema }}">
+  {%- endif -%}
 
-{%- if include.article.tags[0] -%}
-{%- assign _keywords = include.article.tags | join: ',' %}
-<meta itemprop="keywords" content="{{ _keywords }}">
-{%- endif -%}
+  {%- if include.article.tags[0] -%}
+    {%- assign _keywords = include.article.tags | join: ',' %}
+    <meta itemprop="keywords" content="{{ _keywords }}">
+  {%- endif -%}
 {%- endif -%}
