--- a/_includes/read-time.html
+++ b/_includes/read-time.html
@@ -38,7 +38,7 @@
         {{ _unit }}
       </em>
       {%- if include.prompt -%}
-        {%- assign _prompt_words = read_prompt | number_of_words: 'auto' -%}
+        {% assign _prompt_words = read_prompt | number_of_words: 'auto' %}
         {%- unless _prompt_words > 1 -%}{{ ' ' }}{%- endunless -%}
         {{ read_prompt }}
       {%- endif -%}
