--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,6 +6,9 @@ layout: none
 
 <!-- 获取语言 -->
 {%- include snippets/get-lang.html -%}
+
+{% seo %}
+
 <html lang="{{ __return }}">
   <head>
     <!-- 网站分析工具，这里选择的是google analytics -->
