--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -28,6 +28,13 @@ layout: none
   <body>
     <div class="root" data-is-touch="false">{{ content }}</div>
     
+    {%- if page.layout == "article" -%}
+      <a href="#" id="scroll-to-top" title="Scroll to top">
+        <i class="fas fa-angle-up"></i>
+      </a>
+      <script>{%- include scripts/scroll-to-top.js -%}</script>
+    {%- endif -%}
+
     <script>
       {%- include scripts/common.js -%}
     </script>
