--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -23,6 +23,9 @@ layout: none
       {%- include scripts/lib/lazyload.js -%}
     </script>
     {%- include scripts/variables.html -%}
+
+    <!-- Markdown 流程表、MathJax、可交互图标 -->
+    {%- include markdown-enhancements.html -%}
   </head>
 
   <body>
