--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,3 @@
-
 <footer class="footer py-4 js-page-footer">
   <div class="main">
 
@@ -15,15 +14,19 @@
       {%- include snippets/get-nav-url.html path=_site_author_url -%}
       {%- assign _site_author_url = __return -%}
       <meta itemprop="url" content="{{ _site_author_url }}">
+
       {%- if _site_author.bio -%}
         <meta itemprop="description" content="{{ _site_author.bio }}">
       {%- endif -%}
+
       <div class="footer__author-links">
         {%- include author-links.html author=_site_author -%}
       </div>
     </div>
+
     {%- include snippets/get-locale-string.html key='COPYRIGHT_DATES' -%}
     {%- assign _locale_copyright_dates = __return -%}
+    
     <div class="site-info mt-2">
       <div>
         {%- include snippets/get-locale-string.html key='COPYRIGHT_DATES' -%}
@@ -31,6 +34,14 @@
         Copyright © {{ _locale_copyright_dates }}-{{ site.time | date: '%Y' }} {{ site.title }}.
         Powered by <a title="Jekyll is a simple, blog-aware, static site generator." href="http://jekyllrb.com/" target="_blank">Jekyll</a> & <a
         title="TeXt is a super customizable Jekyll theme." href="https://github.com/kitian616/jekyll-TeXt-theme" target="_blank">TeXt Theme</a>.
+      </div>
+    </div>
+
+    <div class="site-info site-statics">
+      <div>
+        <script async src="https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+        <i class="fa fa-user" aria-hidden="true"></i> <span id="busuanzi_value_site_uv"></span> |
+        <i class="fa fa-eye" aria-hidden="true"></i> <span id="busuanzi_value_site_pv"></span>
       </div>
     </div>
   </div>
