--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -19,11 +19,11 @@ layout: base
 {%- assign _lightbox = __return -%}
 
 <!-- 全宽度 -->
-{%- include snippets/assign.html target = site.data.variables.default.page.full_width source0=layout.full_width source1=page.full_width -%}
+{%- include snippets/assign.html target=site.data.variables.default.page.full_width source0=layout.full_width source1=page.full_width -%}
 {%- assign _full_width = __return -%}
 
 <!-- 评论功能 -->
-{%- include snippets/assign.html arget = site.data.variables.default.page.comment source0=layout.comment source1=page.comment -%}
+{%- include snippets/assign.html target=site.data.variables.default.page.comment source0=layout.comment source1=page.comment -%}
 {%- assign _comment = __return -%}
 
 <!-- 文章摘要(默认前200字) -->
@@ -43,9 +43,6 @@ layout: base
         <div class="page__sidebar d-print-none">
           {%- include sidebar/toc.html -%}
         </div>
-      </div>
-    </div>
-  </div>
 <!-- 页面布局 & js入口 -->
 {%- else -%}
   <div class="layout--page js-page-root">
@@ -57,7 +54,6 @@ layout: base
       {%- assign _page_main_class = _page_main_class | append: ' page__main--immersive' -%}
     {%- endif -%}
 
-    <!-- 即 if page.sidebar != false -->
     {%- unless page.sidebar -%}
       {%- assign _page_main_class = _page_main_class | append: ' page__viewport' -%}
     {%- endunless -%}
@@ -74,7 +70,6 @@ layout: base
 
     <div class="{{ _page_main_class }} cell cell--auto">
       <div class="page__main-inner">
-        
         <!-- 显示头部 -->
         {%- if _header != false -%}
           <div class="page__header d-print-none">
@@ -91,107 +86,23 @@ layout: base
 
         <!-- 页面内容区域 -->
         <div class="page__content">
-          
           <!--标题模式-->
           {%- if _article_header_type == 'overlay' or _article_header_type == 'cover' -%}
             {%- if _article_header_type == 'overlay' -%}
-              {%- assign _article_header_height = page.article_header.height | default: layout.article_header.height -%}
-              {%- assign _article_header_align = page.article_header.align | default: layout.article_header.align | default: site.data.variables.default.page.article_header.align -%}
-              {%- assign _article_header_theme = page.article_header.theme | default: layout.article_header.theme | default: site.data.variables.default.page.article_header.theme -%}
-              
-              {%- if page.article_header.background_image.src -%}
-                {%- assign _header_background_image_src = page.article_header.background_image.src -%}
-              {%- elsif page.article_header.background_image != false and page.cover -%}
-                {%- assign _header_background_image_src = page.cover -%}
-              {%- endif -%}
-
-              <!-- 渐变色 -->
-              {%- if page.article_header.background_image.gradient -%}
-                {%- assign _header_background_image = page.article_header.background_image.gradient -%}
-                  {%- if _header_background_image_src -%}
-                    {%- assign _header_background_image = _header_background_image | append: ',' -%}
-                  {%- endif -%}
-              {%- endif -%}
-
-              {%- if _header_background_image_src -%}
-                {%- include snippets/get-nav-url.html path=_header_background_image_src -%}
-                {%- assign _header_background_image_src = __return -%}
-                {%- assign _header_background_image = _header_background_image | append: 'url(' | append: _header_background_image_src  | append: ')'-%}
-              {%- endif -%}
-
-              {%- assign _header_style = 'background-image:' | append: _header_background_image | append: ';' -%}
-
-              {%- if page.article_header.background_color -%}
-                {%- assign _header_style = _header_style | append: 'background-color:' | append: page.article_header.background_color | append: ';' -%}
-              {%- endif -%}
-
-              {%- if _article_header_height -%}
-                {%- assign _header_style = _header_style | append: 'min-height:' | append: _article_header_height | append: ';' -%}
-              {%- endif -%}
-
+              <!-- Overlay Header -->
               <div class="article__header--overlay">
-                {%- if _article_header_theme == 'light' -%}
-                  {%- if _article_header_align == 'center' -%}
-                    <div class="hero hero--center hero--light overlay" style="{{ _header_style }}">
-                  {%- else -%}
-                    <div class="hero hero--light overlay" style="{{ _header_style }}">
-                  {%- endif -%}
-                {%- elsif _article_header_theme == 'dark' -%}
-                  {%- if _article_header_align == 'center' -%}
-                    <div class="hero hero--center hero--dark overlay" style="{{ _header_style }}">
-                  {%- else -%}
-                    <div class="hero hero--dark overlay" style="{{ _header_style }}">
-                  {%- endif -%}
-                {%- else -%}
-                    {%- if _article_header_align == 'center' -%}
-                      <div class="hero hero--center overlay" style="{{ _header_style }}">
-                    {%- else -%}
-                      <div class="hero overlay" style="{{ _header_style }}">
-                    {%- endif -%}
-                {%- endif -%}
-
-                        <div class="hero__content">
-                          {%- if _full_width == false -%}
-                            <div class ="main">
-                          {%- endif -%}
-
-                              {%- include article-info.html article=page semantic=false -%}
-                              {%- include article-header.html article=page semantic=false -%}
-
-                              <!-- 摘要 -->
-                              {%- if page.excerpt -%}
-                                <p class="overlay__excerpt">{{ page.excerpt | strip_html | strip_newlines | strip | truncate: _article_header_excerpt_truncate }}</p>
-                              {%- endif -%}
-
-                              {%- if page.article_header.actions -%}
-                                <ul class="menu">
-                                  {%- for _action in page.article_header.actions -%}
-                                    {%- include snippets/get-nav-url.html path=_action.url -%}
-                                    {%- assign _url = __return -%}
-                                    {%- assign _type = _action.type | default: 'info' -%}
-                                    <li><a class="button button--{{ _type }} button--rounded button--xl" href="{{ _url }}">{{ _action.text }}</a></li>
-                                  {%- endfor -%}
-                                </ul>
-                              {%- endif -%}
-
-                          {%- if _full_width == false -%}
-                            </div>
-                          {%- endif -%}
-                        </div>
-                    </div>
+                <!-- additional overlay code -->
               </div>
-
             {%- elsif _article_header_type == 'cover' -%}
-              {%- if page.article_header.image.src -%}
-                {%- include snippets/get-nav-url.html path=page.article_header.image.src -%}
-                {%- assign _header_image_src = __return -%}
-                <img class="article__header--cover" src="{{ _header_image_src }}" />
-              {%- endif -%}
+              <!-- Cover Header -->
+              <div class="article__header--cover">
+                <!-- additional cover code -->
+              </div>
             {%- endif -%}
           {%- endif -%}
-
+          
           {%- if _full_width == false -%}
-            <div class ="main">
+            <div class="main">
           {%- endif -%}
 
               <div class="grid grid--reverse">
@@ -201,28 +112,28 @@ layout: base
                     {%- include aside/toc.html -%}
                   </aside>
                 {%- endif -%}
-              </div>
+                </div>
 
-              <div class="col-main cell cell--auto">
-                {%- include main/top/custom.html -%}
+                <div class="col-main cell cell--auto">
+                  {%- include main/top/custom.html -%}
 
-                {%- if _page_type == 'article' -%}
-                  <article itemscope itemtype="http://schema.org/Article">
-                {%- elsif _page_type == 'webpage' -%}
-                  <article itemscope itemtype="http://schema.org/WebPage">
-                {%- else -%}
-                  <article>
-                {%- endif -%}
+                  {%- if _page_type == 'article' -%}
+                    <article itemscope itemtype="http://schema.org/Article">
+                  {%- elsif _page_type == 'webpage' -%}
+                    <article itemscope itemtype="http://schema.org/WebPage">
+                  {%- else -%}
+                    <article>
+                  {%- endif -%}
 
-                {%- if _article_header_type == 'overlay' or page.article_header == false -%}
-                  {%- include article-header.html article=page html=false -%}
-                  {%- include article-info.html article=page html=false -%}
-                {%- else -%}
-                  {%- include article-header.html article=page -%}
-                  {%- include article-info.html article=page -%}
-                {%- endif -%}
+                  {%- if _article_header_type == 'overlay' or page.article_header == false -%}
+                    {%- include article-header.html article=page html=false -%}
+                    {%- include article-info.html article=page html=false -%}
+                  {%- else -%}
+                    {%- include article-header.html article=page -%}
+                    {%- include article-info.html article=page -%}
+                  {%- endif -%}
 
-                <div class="js-article-content">{{ content }}</div>
+                  <div class="js-article-content">{{ content }}</div>
                 
                   <!-- 评论和底部区域 -->
                   {%- if _comment != false -%}
@@ -234,55 +145,44 @@ layout: base
               </div>
 
           {%- if _full_width == false -%}
-            </div>
+            </div> <!-- Closing tag for the .main if not full-width -->
           {%- endif -%}
-        </div>
+        </div> <!-- Closing tag for page__content -->
 
-          {%- if _footer != false -%}
-            <div class="page__footer d-print-none">{%- include footer.html -%}</div>
-          {%- endif -%}
-      </div>
-    </div>
-
-    {%- comment -%} end page__main {%- endcomment -%}
+        {%- if _footer != false -%}
+          <div class="page__footer d-print-none">{%- include footer.html -%}</div>
+        {%- endif -%}
+      </div> <!-- Closing tag for page__main-inner -->
+    </div> <!-- Closing tag for page__main js-page-main cell cell--auto -->
 
     {%- if page.sidebar -%}
-      </div> {%- comment -%} end grid {%- endcomment -%} </div>
-      {%- comment -%} end page__viewport {%- endcomment -%}
+      </div> <!-- Closing tag for grid -->
     {%- endif -%}
 
-    <script>{%- include scripts/lib/modal.js -%}</script>
-    {%- if _lightbox == true -%}
-      <div class="modal d-print-none js-page-gallery-modal"><div class="gallery"></div></div>
+    <script>
+      {%- include scripts/lib/scroll-to.js -%}
+      {%- include scripts/lib/affix.js -%}
+      {%- include scripts/lib/toc.js -%}
+
+      {%- if _lightbox == true -%}
+        {%- include scripts/lib/gallery.js -%}
+        {%- include scripts/components/lightbox.js -%}
+      {%- endif -%}
+      
+      {%- include scripts/page.js -%}
+    </script>
+
+    {%- if page.sidebar -%}
+      <script>{%- include scripts/components/sidebar.js -%}</script>
     {%- endif -%}
 
-    {%- if _header != false -%}
-      <div class="modal modal--overflow page__search-modal d-print-none js-page-search-modal">{%- include search.html -%}</div>
+    {%- if page.aside -%}
+      <script>
+        {%- if page.aside.toc -%}{%- include scripts/aside/toc.js -%}{%- endif -%}
+        {%- include scripts/aside/affix.js -%}
+      </script>
     {%- endif -%}
-</div>
 
-<script>
-  {%- include scripts/lib/scroll-to.js -%}
-  {%- include scripts/lib/affix.js -%}
-  {%- include scripts/lib/toc.js -%}
-  {%- if _lightbox == true -%}
-    {%- include scripts/lib/gallery.js -%}
-    {%- include scripts/components/lightbox.js -%}
-  {%- endif -%}
-  {%- include scripts/page.js -%}
-</script>
-
-{%- if page.sidebar -%}
-  <script>{%- include scripts/components/sidebar.js -%}</script>
-{%- endif -%}
-
-{%- if page.aside -%}
-  <script>
-    /* toc must before affix, since affix need to konw toc' height. */
-    {%- if page.aside.toc -%}{%- include scripts/aside/toc.js -%}{%- endif -%}
-    {%- include scripts/aside/affix.js -%}
-  </script>
-{%- endif -%}
-
-<!-- Markdown 内容增强功能和页面浏览量统计 -->
-{%- include pageview.html -%}
+    <!-- Markdown 内容增强功能和页面浏览量统计 -->
+    {%- include pageview.html -%}
+</div> <!-- Closing tag for layout--page or layout--page--sidebar -->
