--- a/_sass/addon/module.scss
+++ b/_sass/addon/module.scss
@@ -1,71 +1,99 @@
 @import "colors";
 
-@mixin prompt($type, $fa-content, $fa-style: 'solid', $rotate: 0) {
-    &.prompt-#{$type} {
-        background-color: var(--prompt-#{$type}-bg);
+%rounded {
+  border-radius: 10px;
+}
 
-        &::before {
-            content: $fa-content;
-            color: var(--prompt-#{$type}-icon-color);
-            font: var(--fa-font-#{$fa-style});
-            font-size: 1.5rem;
-            vertical-align: middle; // 设置垂直对齐
-            margin-top: 0;
+%no-cursor {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
 
-            @if $rotate !=0 {
-                transform: rotate(#{$rotate}deg);
-            }
-        }
+%cursor-pointer {
+  cursor: pointer;
+}
+
+%text-highlight {
+  color: var(--text-muted-highlight-color);
+  font-weight: 600;
+}
+
+%table-cell {
+  padding: 0.4rem 1rem;
+  font-size: 95%;
+  white-space: nowrap;
+}
+
+@mixin prompt($type, $fa-content, $fa-style: "solid", $rotate: 0) {
+  &.prompt-#{$type} {
+    background-color: var(--prompt-#{$type}-bg);
+
+    &::before {
+      content: $fa-content;
+      color: var(--prompt-#{$type}-icon-color);
+      font: var(--fa-font-#{$fa-style});
+      font-size: 1.5rem;
+      vertical-align: middle; // 设置垂直对齐
+      margin-top: 0;
+
+      @if $rotate !=0 {
+        transform: rotate(#{$rotate}deg);
+      }
     }
+  }
 }
 
 @mixin ml-mr($value) {
-    margin-left: $value;
-    margin-right: $value;
+  margin-left: $value;
+  margin-right: $value;
 }
 
-%rounded {
-    border-radius: 10px;
-}
+@mixin colorbox(
+  $border-color,
+  $icon-color,
+  $icon-content,
+  $bg-color,
+  $fa-style: "solid"
+) {
+  border-left: 0.2rem solid $border-color;
+  border-radius: 0.25rem;
+  color: var(--text-color);
+  padding: 0.6rem 1rem 0.6rem 1.5rem;
+  box-shadow: var(--language-border-color) 1px 1px 2px 1px;
+  position: relative;
+  margin-bottom: 1rem;
 
-@mixin colorbox($border-color, $icon-color, $icon-content, $bg-color, $fa-style: 'solid') {
-    border-left: .2rem solid $border-color;
-    border-radius: 0.25rem;
-    color: var(--text-color);
-    padding: .6rem 1rem .6rem 1.5rem;
-    box-shadow: var(--language-border-color) 1px 1px 2px 1px;
-    position: relative;
-    margin-bottom: 1rem;
+  > div.title {
+    background-color: $bg-color;
+    color: $icon-color;
+    padding: 0.5rem 0.6rem 0.5rem 3rem;
+    margin: -0.6rem -1rem 0.6rem -1.5rem;
+    font-weight: 600;
 
-    >div.title {
-        background-color: $bg-color;
-        color: $icon-color;
-        padding: .5rem .6rem .5rem 3rem;
-        margin: -.6rem -1rem .6rem -1.5rem;
-        font-weight: 600;
-
-        &:empty {
-            display: none; // 隐藏空的 title
-            margin: 0; // 移除不必要的 margin
-            padding: 0; // 移除不必要的 padding
-        }
-
-        &::before {
-            content: $icon-content;
-            color: $icon-color;
-            font: var(--fa-font-#{$fa-style});
-            text-align: center;
-            width: 3rem;
-            position: absolute;
-            left: .2rem;
-            margin-top: .4rem;
-            text-rendering: auto;
-            -webkit-font-smoothing: antialiased;
-        }
+    &:empty {
+      display: none; // 隐藏空的 title
+      margin: 0; // 移除不必要的 margin
+      padding: 0; // 移除不必要的 padding
     }
 
-    >p:last-child {
-        margin-bottom: 0;
-        margin-top: 0px;
+    &::before {
+      content: $icon-content;
+      color: $icon-color;
+      font: var(--fa-font-#{$fa-style});
+      text-align: center;
+      width: 3rem;
+      position: absolute;
+      left: 0.2rem;
+      margin-top: 0.4rem;
+      text-rendering: auto;
+      -webkit-font-smoothing: antialiased;
     }
+  }
+
+  > p:last-child {
+    margin-bottom: 0;
+    margin-top: 0px;
+  }
 }
