--- a/_sass/skins/_ocean.scss
+++ b/_sass/skins/_ocean.scss
@@ -71,6 +71,7 @@ $github-color:     #000;
 $npm-color:        #fff;
 $bili-color:       #EC5D85;
 $red-color:        #E82429;
+$csdn-color:       #D81E06;
 
 // highlight colors
 @import "skins/highlight/tomorrow-night-blue";
