--- a/_includes/article-footer.html
+++ b/_includes/article-footer.html
@@ -15,7 +15,8 @@
 
     {%- include snippets/get-locale-string.html key='LAST_UPDATED' -%}
     {%- assign _locale_last_update = __return -%}
-    <span>{{ _locale_last_update }}
+    <span>
+      {{ _locale_last_update }}
       <time itemprop="dateModified" datetime="{{ page.modify_date | date_to_xmlschema }}">{{ page.modify_date | date: _locale_date_format }}</time>
     </span>
   {%- elsif page.date -%}
@@ -24,13 +25,13 @@
 
   {%- include article/footer/custom.html -%}
 
-  <!-- 作者概括 -->
   {%- if _show_author_profile -%}
     {%- if page.author -%}
       {%- assign _author = site.data.authors[page.author] -%}
     {%- else -%}
       {%- assign _author = site.author -%}
     {%- endif -%}
+
     {%- include article/footer/author-profile.html author=_author -%}
   {%- endif -%}
 
@@ -42,12 +43,15 @@
   <!-- 许可证 -->
   {%- if _license != false -%}
     {%- assign _data_license = site.data.licenses-%}
+
     {%- if site.license -%}
       {%- assign _license_data = _data_license[site.license] -%}
     {%- endif -%}
+
     {%- if _license != true -%}
       {%- assign _license_data = _data_license[_license] -%}
     {%- endif -%}
+    
     <div class="article__license">{%- include article/footer/license.html license=_license_data -%}</div>
   {%- endif -%}
 </footer>
