--- a/_includes/article-info.html
+++ b/_includes/article-info.html
@@ -13,6 +13,7 @@
 
 {%- include snippets/assign.html target=site.data.variables.default.page.show_tags source0=layout.show_tags source1=include.article.show_tags -%}
 {%- assign _show_tags = __return -%}
+
 {%- if _show_tags and include.article.tags[0] -%}
   {%- assign _show_tags = true -%}
 {%- else -%}
@@ -23,6 +24,7 @@
 
 {%- include snippets/assign.html target=site.data.variables.default.page.pageview source0=layout.pageview source1=page.pageview -%}
 {%- assign _pageview = __return -%}
+
 {%- if _pageview or include.show_pageview -%}
   {%- assign _pageview = true -%}
 {%- else -%}
@@ -31,13 +33,7 @@
 
 {%- assign _paths_archive = site.paths.archive | default: site.data.variables.default.paths.archive -%}
 
-{%- include snippets/assign.html target=site.data.variables.default.page.read_time -%}
-{%- assign _read_time = __return -%}
-{%- if _read_time -%}
-  {%- assign _read_time = true -%}
-{%- else -%}
-  {%- assign _read_time = false -%}
-{%- endif -%}
+{%- assign _read_time = site.data.variables.default.page.read_time -%}
 
 {%- if _show_tags or _show_author or _show_date or _pageview or _read_time -%}
   <!-- 文章标签、作者、日期 -->
@@ -52,10 +48,7 @@
           {%- assign _tag_path = __return -%}
           {%- assign _tag_encode = _tag | strip | url_encode -%}
           <li>
-            <a
-              class="button button--secondary button--pill button--sm"
-              href="{{ _tag_path | append: _tag_encode | replace: '//', '/' }}"
-            >
+            <a class="button button--secondary button--pill button--sm" href="{{ _tag_path | append: _tag_encode | replace: '//', '/' }}">
               {{- _tag -}}
             </a>
           </li>
