--- a/_includes/article-section-navigator.html
+++ b/_includes/article-section-navigator.html
@@ -1,13 +1,16 @@
 {%- if page.sidebar.nav -%}
   {%- assign _sidebar_nav = site.data.navigation[page.sidebar.nav] -%}
+
   {%- if _sidebar_nav -%}
     {%- assign _find_cur = false -%}
     {%- assign _find_next = false -%}
 
     {%- for _item in _sidebar_nav -%}
-      {%- if _find_next -%} {%- break -%} {%- endif -%}
+      {%- if _find_next -%}
+        {%- break -%}
+      {%- endif -%}
+      
       {%- if _item.children -%}
-
         {%- for _child in _item.children -%}
           {%- include snippets/get-nav-url.html path=_child.url -%}
           {%- assign _nav_url = __return -%}
@@ -24,11 +27,9 @@
             {%- assign _previous = _child -%}
           {%- endif -%}
         {%- endfor -%}
-
       {%- endif -%}
     {%- endfor -%}
   {%- endif -%}
-
 {%- else -%}
   {%- assign _previous = page.previous -%}
   {%- assign _next = page.next -%}
@@ -39,16 +40,31 @@
     {%- if _previous -%}
       {%- include snippets/prepend-baseurl.html path=_previous.url -%}
       {%- assign _href = __return -%}
+
       {%- include snippets/get-locale-string.html key='PREVIOUS' -%}
       {%- assign _locale_previous = __return -%}
-      <div class="previous"><span>{{ _locale_previous }}</span><a href="{{ _href }}">{{ _previous.title }}</a></div>
+
+      <div class="previous">
+        <span>
+          {{ _locale_previous }}
+        </span>
+        <a href="{{ _href }}">{{ _previous.title }}</a>
+      </div>
     {%- endif -%}
+
     {%- if _next -%}
       {%- include snippets/prepend-baseurl.html path=_next.url -%}
       {%- assign _href = __return -%}
+
       {%- include snippets/get-locale-string.html key='NEXT' -%}
       {%- assign _locale_next = __return -%}
-      <div class="next"><span>{{ _locale_next }}</span><a href="{{ _href }}">{{ _next.title }}</a></div>
+
+      <div class="next">
+        <span>
+          {{ _locale_next }}
+        </span>
+        <a href="{{ _href }}">{{ _next.title }}</a>
+      </div>
     {%- endif -%}
   </div>
 {%- endif -%}
