--- a/_includes/extensions/bilibili.html
+++ b/_includes/extensions/bilibili.html
@@ -1,5 +1,3 @@
 <div class="extensions extensions--video">
-  <iframe src="//player.bilibili.com/player.html?aid={{ include.id }}&page=1" frameborder="no" scrolling="no"
-    allowfullscreen="true">
-  </iframe>
+  <iframe src="//player.bilibili.com/player.html?aid={{ include.id }}&page=1" frameborder="no" scrolling="no" allowfullscreen="true"></iframe>
 </div>
