--- a/_includes/extensions/ted.html
+++ b/_includes/extensions/ted.html
@@ -1,4 +1,3 @@
 <div class="extensions extensions--video">
-  <iframe src="https://embed.ted.com/talks/{{ include.id }}" frameborder="0" scrolling="no" allowfullscreen>
-  </iframe>
+  <iframe src="https://embed.ted.com/talks/{{ include.id }}" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
