--- a/_includes/paginator.html
+++ b/_includes/paginator.html
@@ -1,11 +1,11 @@
 {%- if paginator.total_pages > 1 -%}
   <div class="pagination">
-
     {%- include snippets/get-locale-string.html key='STATISTICS' -%}
     {%- assign _locale_statistics = __return -%}
 
     {%- assign _post_count = site.posts | size -%}
     {%- assign _page_count = paginator.total_pages -%}
+
     <p>{{ _locale_statistics | replace: '[POST_COUNT]', _post_count | replace: '[PAGE_COUNT]', _page_count }}</p>
     <div class="pagination__menu">
       <ul class="menu menu--nowrap">
@@ -35,13 +35,17 @@
         {%- if paginator.previous_page -%}
           {%- include snippets/prepend-baseurl.html path=paginator.previous_page_path -%}
           {%- assign _href = __return -%}
-          <li><a class="button button--secondary button--circle" href="{{ _href }}">
-            <i class="fas fa-angle-left"></i>
-          </a></li>
+          <li>
+            <a class="button button--secondary button--circle" href="{{ _href }}">
+              <i class="fas fa-angle-left"></i>
+            </a>
+          </li>
         {%- else -%}
-          <li><div class="button button--secondary button--circle disabled">
+          <li>
+            <div class="button button--secondary button--circle disabled">
             <i class="fas fa-angle-left"></i>
-          </div></li>
+            </div>
+          </li>
         {%- endif -%}
 
         {%- for page in (1.._length) -%}
@@ -49,21 +53,25 @@
             <li>
               <div class="button button--primary button--circle focus"><span>{{ page }}</span></div>
             </li>
-
           {%- elsif page == 1 -%}
             {%- assign _home_path = site.paths.home | default: site.data.variables.default.paths.home -%}
+
             {%- include snippets/prepend-baseurl.html path=_home_path -%}
             {%- assign _href = __return -%}
+            
             <li>
               <a class="button button--secondary button--circle" href="{{ _href }}"><span>{{ page }}</span></a>
             </li>
-
           {%- else -%}
             {%- if _n0 and _n1 -%}
               {%- if page > 1 and page < _n0 -%}
-                {%- if page == 2 -%}<li><span class="pagination__omit"><i class="fas fa-ellipsis-h"></i></span></li>{%- endif -%}
+                {%- if page == 2 -%}
+                  <li><span class="pagination__omit"><i class="fas fa-ellipsis-h"></i></span></li>
+                {%- endif -%}
               {%- elsif page > _n1 and page < _length -%}
-                {%- if page == _length_mimus_one -%}<li><span class="pagination__omit"><i class="fas fa-ellipsis-h"></i></span></li>{%- endif -%}
+                {%- if page == _length_mimus_one -%}
+                  <li><span class="pagination__omit"><i class="fas fa-ellipsis-h"></i></span></li>
+                {%- endif -%}
               {%- else -%}
                 {%- include snippets/prepend-baseurl.html path=site.paginate_path -%}
                 {%- assign _href = __return -%}
@@ -84,13 +92,17 @@
         {%- if paginator.next_page -%}
           {%- include snippets/prepend-baseurl.html path=paginator.next_page_path -%}
           {%- assign _href = __return -%}
-          <li><a class="button button--secondary button--circle" href="{{ _href }}">
-            <i class="fas fa-angle-right"></i>
-          </a></li>
+          <li>
+            <a class="button button--secondary button--circle" href="{{ _href }}">
+              <i class="fas fa-angle-right"></i>
+            </a>
+          </li>
         {%- else -%}
-          <li><div class="button button--secondary button--circle disabled">
-            <i class="fas fa-angle-right"></i>
-          </div></li>
+          <li>
+            <div class="button button--secondary button--circle disabled">
+              <i class="fas fa-angle-right"></i>
+            </div>
+          </li>
         {%- endif -%}
       </ul>
     </div>
