--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -40,6 +40,7 @@ layout: none
 
     <script>
       {%- include scripts/common.js -%}
+      {%- include scripts/clipboard.js -%}
     </script>
   </body>
 </html>
