--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -1,201 +1,243 @@
 @import "module";
 
-blockquote {
-    border-left: 0.125rem solid var(--blockquote-border-color);
-    padding-left: 1rem;
-    color: var(--blockquote-text-color);
-    margin-top: 0.5rem;
-
-    >p:last-child {
-        margin-top: 0;
-    }
-
-    &[class^='prompt-'] {
-        font-size: 1rem;
-        line-height: 1.4rem; // 设置与图标相近的行高
-        border-left: 0;
-        position: relative;
-        padding: 1rem 1rem 1rem 3rem;
-        color: var(--prompt-text-color);
-
-        @extend %rounded;
-
-        &::before {
-            text-align: center;
-            width: 3rem;
-            position: absolute;
-            left: 0.25rem;
-            margin-top: 0.4rem;
-            text-rendering: auto;
-            -webkit-font-smoothing: antialiased;
-        }
-    }
-
-    @include prompt('tip', '\f0eb', $fa-style: 'regular');
-    @include prompt('info', '\f06a', $rotate: 180);
-    @include prompt('warning', '\f06a');
-    @include prompt('danger', '\f071');
+html {
+  &:not([data-mode]),
+  &[data-mode="light"] {
+    @include light-scheme;
+  }
 }
 
+blockquote {
+  border-left: 0.125rem solid var(--blockquote-border-color);
+  padding-left: 1rem;
+  color: var(--blockquote-text-color);
+  margin-top: 0.5rem;
+
+  > p:last-child {
+    margin-top: 0;
+  }
+
+  &[class^="prompt-"] {
+    font-size: 1rem;
+    line-height: 1.4rem; // 设置与图标相近的行高
+    border-left: 0;
+    position: relative;
+    padding: 1rem 1rem 1rem 3rem;
+    color: var(--prompt-text-color);
+
+    @extend %rounded;
+
+    &::before {
+      text-align: center;
+      width: 3rem;
+      position: absolute;
+      left: 0.25rem;
+      margin-top: 0.4rem;
+      text-rendering: auto;
+      -webkit-font-smoothing: antialiased;
+    }
+  }
+
+  @include prompt("tip", "\f0eb", $fa-style: "regular");
+  @include prompt("info", "\f06a", $rotate: 180);
+  @include prompt("warning", "\f06a");
+  @include prompt("danger", "\f071");
+}
+
+/* 适配小尺寸设备 */
 @media all and (max-width: 576px) {
-    main {
-        .content {
-            >blockquote[class^='prompt-'] {
-                @include ml-mr(-1rem);
+  main {
+    .content {
+      > blockquote[class^="prompt-"] {
+        @include ml-mr(-1rem);
 
-                border-radius: 0;
-                max-width: none;
-            }
-        }
+        border-radius: 0;
+        max-width: none;
+      }
     }
-
-    #avatar {
-        width: 5rem;
-        height: 5rem;
-    }
+  }
 }
 
 .box-info {
-    @include colorbox(var(--prompt-info-icon-color),
-        var(--prompt-info-icon-color),
-        "\f06a",
-        var(--prompt-info-bg));
+  @include colorbox(
+    var(--prompt-info-icon-color),
+    var(--prompt-info-icon-color),
+    "\f06a",
+    var(--prompt-info-bg)
+  );
 }
 
-/* box-tip 绿色 */
 .box-tip {
-    @include colorbox(var(--prompt-tip-icon-color),
-        var(--prompt-tip-icon-color),
-        "\f0eb",
-        var(--prompt-tip-bg),
-        'regular'
-    );
+  @include colorbox(
+    var(--prompt-tip-icon-color),
+    var(--prompt-tip-icon-color),
+    "\f0eb",
+    var(--prompt-tip-bg),
+    "regular"
+  );
 }
 
-/* box-warning 黄色 */
 .box-warning {
-    @include colorbox(var(--prompt-warning-icon-color),
-        var(--prompt-warning-icon-color),
-        "\f06a",
-        var(--prompt-warning-bg));
+  @include colorbox(
+    var(--prompt-warning-icon-color),
+    var(--prompt-warning-icon-color),
+    "\f06a",
+    var(--prompt-warning-bg)
+  );
 }
 
-/* box-danger 红色 */
 .box-danger {
-    @include colorbox(var(--prompt-danger-icon-color),
-        var(--prompt-danger-icon-color),
-        "\f071",
-        var(--prompt-danger-bg));
+  @include colorbox(
+    var(--prompt-danger-icon-color),
+    var(--prompt-danger-icon-color),
+    "\f071",
+    var(--prompt-danger-bg)
+  );
 }
 
 details {
-    border-radius: .25rem;
-    box-shadow: var(--language-border-color) 1px 1px 2px 1px; //借用了代码框的边框颜色变量
-    font-family: "Georgia", serif;
-    margin-bottom: 1rem;
-    padding: .6rem 1rem .6rem 1.5rem;
+  border-radius: 0.25rem;
+  box-shadow: var(--language-border-color) 1px 1px 2px 1px; //借用了代码框的边框颜色变量
+  font-family: "Georgia", serif;
+  margin-bottom: 1rem;
+  padding: 0.6rem 1rem 0.6rem 1.5rem;
 
-    >p:last-child {
-        margin-bottom: 0;
+  > p:last-child {
+    margin-bottom: 0;
+  }
+
+  > summary {
+    padding: 0.5rem 1rem 0.5rem 1rem;
+    margin: -0.6rem -1rem -0.6rem -1.5rem;
+    font-weight: 600;
+    position: relative;
+    list-style: none; //隐藏默认的箭头
+    transition: background-color 0.3s ease; //添加颜色过渡效果
+    text-decoration: none; //去除下划线
+
+    &::before {
+      /* 关闭状态下 */
+      /* 也可以用其他符号或自定义图标，比如 Unicode 字符 */
+      // content: '🙈';
+      // content:'\002B9A';
+      margin-right: 0.5rem;
+      display: inline-block;
     }
 
-    >summary {
-        padding: .5rem 1.0rem .5rem 1.0rem;
-        margin: -.6rem -1rem -.6rem -1.5rem;
-        font-weight: 600;
-        text-decoration: underline;
-        position: relative;
-        list-style: none; //隐藏默认的箭头
-        transition: background-color 0.3s ease; //添加颜色过渡效果
-        text-decoration: none; //去除下划线
+    &::after {
+      font-family: "Font Awesome 6 Free";
+      content: "\f105"; //Unicode for fa-angle-down
+      display: inline-block;
+      transition: transform 0.2s ease; //添加旋转动画
+      position: absolute;
+      right: 1rem; //调整箭头在最右边的位置
     }
+  }
+
+  &[open] {
+    > summary {
+      // transition: margin 200ms ease-out;
+      margin-bottom: 0.6rem; // 展开会有动画效果
+    }
+
+    &::before {
+      /* 展开状态下 */
+      // content: '🐵';
+      // content: '\002B9B';
+      animation: my-cat 0.2s ease-in-out; //点击会有动画效果
+      margin-right: 0.5rem;
+    }
+
+    &::after {
+      transform: rotate(90deg);
+    }
+  }
 }
 
-details>summary::-webkit-details-marker {
-    display: none; //隐藏默认的箭头
+details > summary::-webkit-details-marker {
+  display: none; //隐藏默认的箭头
 }
 
-details>summary::marker {
-    content: none; //隐藏默认的箭头
-}
-
-details>summary::before {
-    /* 关闭状态下 */
-    /* 也可以用其他符号或自定义图标，比如 Unicode 字符 */
-    // content: '🙈'; 
-    // content:'\002B9A';
-    margin-right: .5rem;
-    display: inline-block;
-}
-
-details[open]>summary::before {
-    /* 展开状态下 */
-    // content: '🐵';
-    // content: '\002B9B';
-    animation: my-cat .2s ease-in-out; //点击会有动画效果
-    margin-right: .5rem;
-}
-
-details>summary::after {
-    font-family: 'Font Awesome 6 Free';
-    content: "\f105"; //Unicode for fa-angle-down
-    display: inline-block;
-    transition: transform 0.2s ease; //添加旋转动画
-    position: absolute;
-    right: 1rem; //调整箭头在最右边的位置
-}
-
-details[open]>summary::after {
-    transform: rotate(90deg);
-}
-
-details[open]>summary {
-    // transition: margin 200ms ease-out;
-    margin-bottom: .6rem; // 展开会有动画效果
+details > summary::marker {
+  content: none; //隐藏默认的内容
 }
 
 /* 动画效果代码 */
 @keyframes my-cat {
-    50% {
-        transform: scale(1.3);
-    }
+  50% {
+    transform: scale(1.3);
+  }
 }
 
 .details-definition {
-    border-left: .2rem solid var(--prompt-tip-icon-color);
+  border-left: 0.2rem solid var(--prompt-tip-icon-color);
 
-    >summary {
-        background-color: var(--prompt-tip-bg);
-        color: var(--prompt-tip-icon-color);
-    }
+  > summary {
+    background-color: var(--prompt-tip-bg);
+    color: var(--prompt-tip-icon-color);
+  }
 }
 
 .details-theorem {
-    border-left: .2rem solid var(--prompt-warning-icon-color);
+  border-left: 0.2rem solid var(--prompt-warning-icon-color);
 
-    
-    >summary {
-        background-color: var(--prompt-warning-bg);
-        color: var(--prompt-warning-icon-color);
-    }
+  > summary {
+    background-color: var(--prompt-warning-bg);
+    color: var(--prompt-warning-icon-color);
+  }
 }
 
 .details-proposition {
-    border-left: .2rem solid var(--prompt-info-icon-color);
+  border-left: 0.2rem solid var(--prompt-info-icon-color);
 
-    
-    >summary {
-        background-color: var(--prompt-info-bg);
-        color: var(--prompt-info-icon-color);
-    }
+  > summary {
+    background-color: var(--prompt-info-bg);
+    color: var(--prompt-info-icon-color);
+  }
 }
 
 .details-example {
-    border-left: .2rem solid var(--prompt-danger-icon-color);
+  border-left: 0.2rem solid var(--prompt-danger-icon-color);
 
-    
-    >summary {
-        background-color: var(--prompt-danger-bg);
-        color: var(--prompt-danger-icon-color);
+  > summary {
+    background-color: var(--prompt-danger-bg);
+    color: var(--prompt-danger-icon-color);
+  }
+}
+
+.table-wrapper {
+  overflow-x: auto;
+  margin-bottom: 1.5rem;
+
+  > table {
+    min-width: 100%;
+    overflow-x: auto;
+    border-spacing: 0;
+
+    thead {
+      border-bottom: solid 2px rgba(210, 215, 217, 0.75);
+
+      th {
+        @extend %table-cell;
+      }
     }
+
+    tbody {
+      tr {
+        border-bottom: 1px solid var(--tb-border-color);
+
+        &:nth-child(2n) {
+          background-color: var(--tb-even-bg);
+        }
+
+        &:nth-child(2n + 1) {
+          background-color: var(--tb-odd-bg);
+        }
+
+        td {
+          @extend %table-cell;
+        }
+      }
+    }
+  }
 }
