--- a/_sass/components/_author-links.scss
+++ b/_sass/components/_author-links.scss
@@ -44,6 +44,9 @@
       .red-button {
         @include clickable($text-color-1, $red-color);
       }
+      .csdn-button {
+        @include clickable($text-color-1, $csdn-color);
+      }
     }
   }
 }
