--- a/_sass/scroll-to-top.scss
+++ b/_sass/scroll-to-top.scss
@@ -1,21 +1,38 @@
 #scroll-to-top {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    display: none;
-    width: 40px;
-    height: 40px;
-    background-color: #f0f0f0;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 40px;
-    font-size: 24px;
-    color: #333;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
-    transition: opacity 0.3s;
-}
+  position: fixed;
+  z-index: 1;
+  bottom: calc(6rem - 2.75rem / 2);
+  right: 1rem;
+  display: none;
+  width: 2.75rem;
+  height: 2.75rem;
+  background-color: #f0f0f0;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 40px;
+  font-size: 24px;
+  color: #686868;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  transition: opacity 0.3s;
+  padding: 0;
+  border: 1px solid #f1f1f1;
+  transition: opacity 0.5s ease-in-out, transform 0.2s ease-out;
 
-#scroll-to-top:hover {
+  &:hover {
+    transform: translate3d(0, -5px, 0);
+    -webkit-transform: translate3d(0, -5px, 0);
     background-color: #ddd;
+  }
+
+  i {
+    line-height: 2.75rem;
+    position: relative;
+    bottom: 2px;
+  }
+
+  &.show {
+    opacity: 1;
+    visibility: visible;
+  }
 }
