--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,7 +12,7 @@
     // "skins/ocean",
     // "skins/orange",
 
-    "skins/highlight/{{ site.highlight_theme | default: site.data.variables.default.highlight_theme }}",
+    // "skins/highlight/{{ site.highlight_theme | default: site.data.variables.default.highlight_theme }}",
     // "skins/highlight/tomorrow",
     // "skins/highlight/tomorrow-night",
     // "skins/highlight/tomorrow-night-eighties",
@@ -58,6 +58,8 @@
     "addon/commons",
     "addon/module",
     "addon/colors",
+    "addon/syntax",
+    "addon/syntax-light",
 
     "additional/alert",
     "additional/tag",
@@ -77,10 +79,7 @@
     "donate",
     "sharing",
     "scroll-to-top",
+    "clipboard",
 
-    "contact/email",
-
-    "math/definition",
-    "math/proposition",
-    "math/theorem"
+    "contact/email"
 ;
